Added a picture in for testing

--- a/index.html
+++ b/index.html
@@ -20,14 +20,11 @@
         <a href="contact.html">Contact</a>
     </nav>
     
-        <a href="index.html">Home</a>
-        <a href="about.html">About Us</a>
-        <a href="gallery.html">Gallery</a>
-        <a href="contact.html">Contact</a>
-    </nav>
     <div class="content">
         
-    <div class="hero">Discover Amazing Places in China and Central Asia</div>
+        <div class="hero">
+            <h2>Discover Amazing Places in China and Central Asia</h2>
+        </div>
     <div class="tour">
         <h2>Chongqing: Surreal Urban, Ancient Town, and Secret Viewpoint</h2>
         <p>Experience Chongqing's magic in one day — from sky-high monorails to local street chats, ancient alleys, Yangtze river views, and hidden gems that reveal the soul of China’s 8D Magic City.</p>
