--- a/calendar.html
+++ b/calendar.html
@@ -9,12 +9,13 @@
 <body>
     <header>
         <h1>Skymatz Resources</h1>
-        <p>Your Journey, Our Expertised</p>
+        <p>Your Journey, Our Expertise</p>
     </header>
     <nav>
         <a href="index.html">Home</a>
         <a href="about.html">About Us</a>
         <a href="gallery.html">Gallery</a>
+        <a href="calendar.html">Book Tour</a>
         <a href="contact.html">Contact</a>
     </nav>
     <div class="content">
