--- a/calendar.html
+++ b/calendar.html
@@ -14,7 +14,7 @@
     <nav>
         <a href="index.html">Home</a>
         <a href="about.html">About Us</a>
-        <a href="gallery.html">Gallery</a>
+        <a href="destination.html">Destination</a>
         <a href="calendar.html">Book Tour</a>
         <a href="contact.html">Contact</a>
     </nav>
