Update price tag

--- a/city/jingdezhen.html
+++ b/city/jingdezhen.html
@@ -29,7 +29,7 @@
               <img src="../picture/jingdezhen/thumbnail_IMG_5558.jpg" alt="Jingdezhen Normal Tour">
               <h3>Jingdezhen: Porcelain, Kilns, Art, and Market Tour</h3>
               <p>From ancient to modern, from the British Museum to NYC’s MET, Jingdezhen porcelain amazes worldwide. Discover China’s porcelain capital and experience its rich craftsmanship on this private day tour.</p>            </p>
-              <p><strong>Price:</strong>From 180 per person</p>
+              <p><strong>Price:</strong>From £115 per person</p>
               <a href="../tourpackage/jingdezhen/jingdezhen-city-tour-details.html" class="btn">Book Now</a>
             </div>
             
