--- a/city/changsha.html
+++ b/city/changsha.html
@@ -29,7 +29,7 @@
               <img src="../picture/changsha/WechatIMG3040.jpg" alt="Changsha Normal Tour">
               <h3>Changsha: River View, Ancient Hill, Handcraft & Night Market</h3>
               <p>Discover the soulful charm of Changsha in one enriching day—river walks, ancient academies, hidden alleys, hands-on fan painting, flavorful street food, and buzzing night markets.</p>
-              <p><strong>Price:</strong>From 115 per person</p>
+              <p><strong>Price:</strong>From £95 per person</p>
               <a href="../tourpackage/changsha/changsha-normal-tour-details.html" class="btn">Book Now</a>
             </div>
             
@@ -38,7 +38,7 @@
               <img src="../picture/changshafood/WechatIMG3084.jpg" alt="Changsha Food Tour">
               <h3>Changsha: No Chili, No Problem, Non-Spicy Foodie Adventure</h3>
               <p>Changsha is known for spicy food, but there’s also a delicious non-spicy side! Explore Changsha’s historic alleys and retro streets while tasting non-spicy local favorites.</p>
-              <p><strong>Price:</strong>From 115 per person</p>
+              <p><strong>Price:</strong>From £55 per person</p>
               <a href="../tourpackage/changsha/changsha-food-tour-details.html" class="btn">Book Now</a>
             </div>
             
