--- a/city/hangzhou.html
+++ b/city/hangzhou.html
@@ -27,7 +27,7 @@
             <!-- Tour 1 -->
             <div class="tour-item">
               <img src="../picture/hangzhou/杭州西湖風景名勝區+蘇堤+西湖外事遊船+登三潭印月半日【西湖十景3小時人工講解乘西湖遊船三潭印月島】.jpg" alt="Hangzhou Normal Tour">
-              <h3>Hangzhou: River View, Ancient Hill, Handcraft & Night Market</h3>
+              <h3>Hidden Hangzhou: West Lake, Silk Culture & Artisan Alleyways</h3>
               <p>Uncover Hangzhou’s poetic charm beyond the tourist trail: stroll West Lake, explore centuries-old silk traditions, dive into hidden art alleys, and handcraft your own cloisonné keepsake.</p>
               <p><strong>Price:</strong>From £100 per person</p>
               <a href="../tourpackage/hangzhou/hangzhou-normal-tour-details.html" class="btn">Book Now</a>
@@ -38,7 +38,7 @@
               <img src="../picture/haining/WechatIMG3355.jpg" alt="Haining Normal Tour">
               <h3>Hangzhou to Haining: Tide Park, Folk Museum & Shadow Puppet</h3>
               <p>Discover Haining's cultural heritage: from tidal wonders to folk museums, poetic alleys, and a hands-on shadow puppet crafting experience in a historic street.</p>
-              <p><strong>Price:</strong>From £100 per person</p>
+              <p><strong>Price:</strong>From £110 per person</p>
               <a href="../tourpackage/hangzhou/haining-normal-tour-details.html" class="btn">Book Now</a>
             </div>
             
@@ -47,7 +47,7 @@
               <img src="../picture/hangzhoutea/WechatIMG3331.jpg" alt="Hangzhou Tea Tour">
               <h3>From Hangzhou: Longwu Tea Village, Longmen Town & Dam Tours</h3>
               <p>Escape Hangzhou for a day to explore lush tea fields, hand-fry Dragon Well tea, sip Song-style tea, walk through a riverside Ming-Qing village, and end by a dragon-scale-shaped dam.</p>
-              <p><strong>Price:</strong>From £195 per person</p>
+              <p><strong>Price:</strong>From £130 per person</p>
               <a href="../tourpackage/hangzhou/hangzhou-tea-tour-details.html" class="btn">Book Now</a>
             </div>
 
@@ -56,7 +56,7 @@
               <img src="../picture/jiaxin/WechatIMG3356.jpg" alt="Jiaxing Normal Tour">
               <h3>Hangzhou to Jiaxing: South Lake, Local Snack & Heritage Walk</h3>
               <p> Enjoy a full-day journey from Hangzhou to Jiaxing: stroll historic South Lake gardens, savor local Siu Mai, explore ancient streets, and dive into the flavors of Zongzi at a traditional museum.</p>
-              <p><strong>Price:</strong>From £100 per person</p>
+              <p><strong>Price:</strong>From £95 per person</p>
               <a href="../tourpackage/hangzhou/jiaxing-normal-tour-details.html" class="btn">Book Now</a>
             </div>
           </div>
