--- a/tourpackage/chongqing/chongqing-nightglow-tour-details.html
+++ b/tourpackage/chongqing/chongqing-nightglow-tour-details.html
@@ -265,7 +265,7 @@ The magical and chill evening ends with a hotel drop-off, leaving you with unfor
           this.textContent = 'Book';
         } else {
           // Redirect to payment link when "Book" is pressed
-          window.location.href = 'https://your-payment-link.com';
+          window.location.href = '../../calendar.html';
         }
       });
 
