--- a/tourpackage/chongqing/chongqing-wulong-tour-details.html
+++ b/tourpackage/chongqing/chongqing-wulong-tour-details.html
@@ -267,7 +267,7 @@ This 12-hour private tour includes downtown Chongqing hotel pickup and drop-off,
           this.textContent = 'Book';
         } else {
           // Redirect to payment link when "Book" is pressed
-          window.location.href = 'https://your-payment-link.com';
+          window.location.href = '../../calendar.html';
         }
       });
 
