--- a/tourpackage/guangzhou/guangzhou-normal-tour-details.html
+++ b/tourpackage/guangzhou/guangzhou-normal-tour-details.html
@@ -268,7 +268,7 @@ End your tour at a hidden viewpoint with a stunning panorama of the Canton Tower
           this.textContent = 'Book';
         } else {
           // Redirect to payment link when "Book" is pressed
-          window.location.href = 'https://your-payment-link.com';
+          window.location.href = '../../calendar.html';
         }
       });
 
