--- a/tourpackage/guilin/guilin-plantation-tour-details.html
+++ b/tourpackage/guilin/guilin-plantation-tour-details.html
@@ -256,7 +256,7 @@ Guzhuang Village: </strong>a tranquil Zhuang minority village nestled at the bas
           this.textContent = 'Book';
         } else {
           // Redirect to payment link when "Book" is pressed
-          window.location.href = 'https://your-payment-link.com';
+          window.location.href = '../../calendar.html';
         }
       });
 
