--- a/tourpackage/guilin/yangshuo-unveiled-tour-details.html
+++ b/tourpackage/guilin/yangshuo-unveiled-tour-details.html
@@ -261,7 +261,7 @@ Wander through the timeless streets of Xingping Old Town, a 1,700-year-old town 
           this.textContent = 'Book';
         } else {
           // Redirect to payment link when "Book" is pressed
-          window.location.href = 'https://your-payment-link.com';
+          window.location.href = '../../calendar.html';
         }
       });
 
