--- a/tourpackage/hangzhou/jiaxing-normal-tour-details.html
+++ b/tourpackage/hangzhou/jiaxing-normal-tour-details.html
@@ -265,7 +265,7 @@ End the day at <strong>Yuehe Old Street:</strong> one of Jiaxing’s most charmi
           this.textContent = 'Book';
         } else {
           // Redirect to payment link when "Book" is pressed
-          window.location.href = 'https://your-payment-link.com';
+          window.location.href = '../../calendar.html';
         }
       });
 
