--- a/tourpackage/jingdezhen/jingdezhen-city-tour-details.html
+++ b/tourpackage/jingdezhen/jingdezhen-city-tour-details.html
@@ -267,7 +267,7 @@ If you’re visiting on a weekday, you’ll explore the Sculpture Ceramic Factor
           this.textContent = 'Book';
         } else {
           // Redirect to payment link when "Book" is pressed
-          window.location.href = 'https://your-payment-link.com';
+          window.location.href = '../../calendar.html';
         }
       });
 
