--- a/tourpackage/zhangjiajie/zhangjiajie-normal-tour-details.html
+++ b/tourpackage/zhangjiajie/zhangjiajie-normal-tour-details.html
@@ -253,7 +253,7 @@ Admire natural wonders like the Fairy Scattering Flowers and Imperial Brush Peak
           this.textContent = 'Book';
         } else {
           // Redirect to payment link when "Book" is pressed
-          window.location.href = 'https://your-payment-link.com';
+          window.location.href = '../../calendar.html';
         }
       });
 
