--- a/tourpackage/chengdu/chengdu-normal-tour-details.html
+++ b/tourpackage/chengdu/chengdu-normal-tour-details.html
@@ -272,7 +272,7 @@ X<strong>iaotong Alley &amp; Paotongshu Street:</strong> Just a short walk away,
           this.textContent = 'Book';
         } else {
           // Redirect to payment link when "Book" is pressed
-          window.location.href = 'https://your-payment-link.com';
+          window.location.href = '../../calendar.html';
         }
       });
 
