--- a/tourpackage/chongqing/chongqing-heritage-tour-details.html
+++ b/tourpackage/chongqing/chongqing-heritage-tour-details.html
@@ -273,7 +273,7 @@ Walk along Bai Xiang Street, where every stone tells a story from Chongqing’s 
           this.textContent = 'Book';
         } else {
           // Redirect to payment link when "Book" is pressed
-          window.location.href = 'https://your-payment-link.com';
+          window.location.href = '../../calendar.html';
         }
       });
 
