--- a/tourpackage/dalian/dalian-city-tour-details.html
+++ b/tourpackage/dalian/dalian-city-tour-details.html
@@ -251,7 +251,7 @@ Explore Dalian Forest Zoo, home to both lush natural landscapes and rare animals
           this.textContent = 'Book';
         } else {
           // Redirect to payment link when "Book" is pressed
-          window.location.href = 'https://your-payment-link.com';
+          window.location.href = '../../calendar.html';
         }
       });
 
