--- a/tourpackage/nanjing/nanjing-normal-tour-details.html
+++ b/tourpackage/nanjing/nanjing-normal-tour-details.html
@@ -268,7 +268,7 @@ End at the lively Fuzimiao (Confucius Temple) and Qinhuai River Scenic Area. Str
           this.textContent = 'Book';
         } else {
           // Redirect to payment link when "Book" is pressed
-          window.location.href = 'https://your-payment-link.com';
+          window.location.href = '../../calendar.html';
         }
       });
 
