--- a/tourpackage/qingdao/qingdao-charm-tour-details.html
+++ b/tourpackage/qingdao/qingdao-charm-tour-details.html
@@ -269,7 +269,7 @@
           this.textContent = 'Book';
         } else {
           // Redirect to payment link when "Book" is pressed
-          window.location.href = 'https://your-payment-link.com';
+          window.location.href = '../../calendar.html';
         }
       });
 
