--- a/tourpackage/shanghai/shanghai-essential-tour-details.html
+++ b/tourpackage/shanghai/shanghai-essential-tour-details.html
@@ -263,7 +263,7 @@ End your day with breathtaking views of The Bund’s historic buildings and Luji
           this.textContent = 'Book';
         } else {
           // Redirect to payment link when "Book" is pressed
-          window.location.href = 'https://your-payment-link.com';
+          window.location.href = '../../calendar.html';
         }
       });
 
