--- a/tourpackage/wuhan/wuhan-melody-tour-details.html
+++ b/tourpackage/wuhan/wuhan-melody-tour-details.html
@@ -277,7 +277,7 @@
           this.textContent = 'Book';
         } else {
           // Redirect to payment link when "Book" is pressed
-          window.location.href = 'https://your-payment-link.com';
+          window.location.href = '../../calendar.html';
         }
       });
 
