--- a/tourpackage/xiamen/xiamen-normal-tour-details.html
+++ b/tourpackage/xiamen/xiamen-normal-tour-details.html
@@ -267,7 +267,7 @@
           this.textContent = 'Book';
         } else {
           // Redirect to payment link when "Book" is pressed
-          window.location.href = 'https://your-payment-link.com';
+          window.location.href = '../../calendar.html';
         }
       });
 
