--- a/tourpackage/xiamen/zhangzhou-normal-tour-details.html
+++ b/tourpackage/xiamen/zhangzhou-normal-tour-details.html
@@ -258,7 +258,7 @@ Marvel at the architectural mix of Western columns, Gothic windows, and classic 
           this.textContent = 'Book';
         } else {
           // Redirect to payment link when "Book" is pressed
-          window.location.href = 'https://your-payment-link.com';
+          window.location.href = '../../calendar.html';
         }
       });
 
