--- a/tourpackage/xian/xian-normal-tour-details.html
+++ b/tourpackage/xian/xian-normal-tour-details.html
@@ -268,7 +268,7 @@ Return comfortably to your hotel, filled with unforgettable memories of Xiâ€™anâ
           this.textContent = 'Book';
         } else {
           // Redirect to payment link when "Book" is pressed
-          window.location.href = 'https://your-payment-link.com';
+          window.location.href = '../../calendar.html';
         }
       });
 
