--- a/tourpackage/zhengzhou/kaifeng-normal-tour-details.html
+++ b/tourpackage/zhengzhou/kaifeng-normal-tour-details.html
@@ -261,7 +261,7 @@ City Walk of the Kaifeng Old Town. Discover Kaifeng beyond tourist routes throug
           this.textContent = 'Book';
         } else {
           // Redirect to payment link when "Book" is pressed
-          window.location.href = 'https://your-payment-link.com';
+          window.location.href = '../../calendar.html';
         }
       });
 
