--- a/calendar.html
+++ b/calendar.html
@@ -10,8 +10,9 @@
         input[type="text"],
         input[type="email"],
         input[type="date"],
+        input[type="time"],
         select {
-          width: 300px;      /* or your preferred width */
+          width: 400px;      /* or your preferred width */
           padding: 0.5rem;
           border-radius: 5px;
           border: 1px solid #ccc;
@@ -19,22 +20,62 @@
           box-sizing: border-box;
           margin-bottom: 1rem;
         }
+
+        input[type="tel"]{
+          width: 250px;  
+          padding: 0.5rem;
+          border-radius: 5px;
+          border: 1px solid #ccc;
+          font-size: 1rem;
+          box-sizing: border-box;
+          margin-bottom: 1rem;
+        }
+
+        #contact-country {
+        width: 150px; /* If your other inputs are 300px */
+        }
       </style>
 
 <script src="https://www.paypal.com/sdk/js?client-id=AYAT6GJdWpCiKe4DSePT0dxWXS3tHzDmSpNp_DxQmKVdGpItNz0jdy_LP0xB_enfsJzn1RG_sNpcsFkv&currency=GBP&merchant-id=TSJPEKK7GPHRE"></script>
 </head>
 <body>
-    <header>
-        <h1>Skymatz Resources</h1>
-        <p>Your Journey, Our Expertise</p>
-    </header>
-    <nav>
+    <header class="site-header">
+        <div class="header-container">
+        <div class="header-left">
+        <img src="picture/companylogo/svgexport-3.jpg" alt="Skymatz Resources Logo" class="company-logo">
+        </div>
+        <nav class="header-nav">
         <a href="index.html">Home</a>
-        <a href="about.html">About Us</a>
-        <a href="destination.html">Destination</a>
+        <a href="about.html">About Us</a> 
+        <div class="dropdown">
+          <a href="destination.html" class="dropbtn">Destination ▼</a>
+          <div class="dropdown-content">
+            <a href="city/chongqing.html">Chongqing</a>
+            <a href="city/chengdu.html">Chengdu</a>
+            <a href="city/changsha.html">Changsha</a>
+            <a href="city/dalian.html">Dalian</a>
+            <a href="city/guangzhou.html">Guangzhou</a>
+            <a href="city/guilin.html">Guilin</a>
+            <a href="city/hangzhou.html">Hangzhou</a>
+            <a href="city/jingdezhen.html">Jingdezhen</a>
+            <a href="city/nanjing.html">Nanjing</a>
+            <a href="city/qingdao.html">Qingdao</a>
+            <a href="city/shanghai.html">Shanghai</a>
+            <a href="city/wuhan.html">Wuhan</a>
+            <a href="city/xiamen.html">Xiamen</a>
+            <a href="city/xian.html">Xi’an</a>
+            <a href="city/zhangjiajie.html">Zhangjiajie</a>
+            <a href="city/zhengzhou.html">Zhengzhou</a>
+          </div>
+        </div>
         <a href="calendar.html">Book Tour</a>
-        <a href="contact.html">Contact</a>
-    </nav>
+        <a href="contact.html">Contact Us</a>
+        </nav>
+        <div class="header-right">
+        <span class="contact-number">+44 7724231701</span>
+        </div>
+        </div>
+        </header>
     <div class="content">
         
 <h2>Book a Tour</h2>
@@ -84,14 +125,9 @@
     </select><br><br>
     <label for="date">Preferred Date:</label><br>
     <input type="date" id="date" name="date" required><br><br>
-    <label for="name">Your Name:</label><br>
-    <input type="text" id="name" name="name" required><br><br>
-    <label for="name">Pick Up Location:</label><br>
-    <input type="text" id="location" name="location" required><br><br>
-    <label for="email">Email:</label><br>
-    <input type="email" id="email" name="email" required><br><br>
     <label for="participants">Participants:</label><br>
     <select id="participants" name="participants" required>
+    <option value="">-- Number of participants --</option>
     <option value="1">1 Person</option>
     <option value="2">2 Persons</option>
     <option value="3">3 Persons</option>
@@ -99,6 +135,139 @@
     <option value="5">5 Persons</option>
     <option value="6">6 Persons</option>
     </select><br><br>
+    <label for="name">Your Name:</label><br>
+    <input type="text" id="name" name="name" required><br><br>
+    <label for="name">Pick Up Location:</label><br>
+    <input type="text" id="location" name="location" required><br><br>
+    <label for="email">Email:</label><br>
+    <input type="email" id="email" name="email" required pattern="^[a-zA-Z0-9._%+-]+@[a-zA-Z0-9.-]+\.[a-zA-Z]{2,}$"><br><br>
+    <label for="contact-country">Contact number:</label><br>
+    <select id="contact-country" name="contact-country" required>
+    <option value="" data-length="">Country Code</option>
+    <option value="+93" data-length="9">Afghanistan (+93)</option>
+    <option value="+355" data-length="9">Albania (+355)</option>
+    <option value="+213" data-length="9">Algeria (+213)</option>
+    <option value="+376" data-length="6">Andorra (+376)</option>
+    <option value="+244" data-length="9">Angola (+244)</option>
+    <option value="+54" data-length="10">Argentina (+54)</option>
+    <option value="+374" data-length="8">Armenia (+374)</option>
+    <option value="+61" data-length="9">Australia (+61)</option>
+    <option value="+43" data-length="10">Austria (+43)</option>
+    <option value="+994" data-length="9">Azerbaijan (+994)</option>
+    <option value="+973" data-length="8">Bahrain (+973)</option>
+    <option value="+880" data-length="10">Bangladesh (+880)</option>
+    <option value="+375" data-length="9">Belarus (+375)</option>
+    <option value="+32" data-length="9">Belgium (+32)</option>
+    <option value="+591" data-length="8">Bolivia (+591)</option>
+    <option value="+387" data-length="8">Bosnia & Herzegovina (+387)</option>
+    <option value="+267" data-length="7">Botswana (+267)</option>
+    <option value="+55" data-length="11">Brazil (+55)</option>
+    <option value="+359" data-length="9">Bulgaria (+359)</option>
+    <option value="+226" data-length="8">Burkina Faso (+226)</option>
+    <option value="+855" data-length="9">Cambodia (+855)</option>
+    <option value="+237" data-length="9">Cameroon (+237)</option>
+    <option value="+1" data-length="10">Canada (+1)</option>
+    <option value="+86" data-length="11">China (+86)</option>
+    <option value="+57" data-length="10">Colombia (+57)</option>
+    <option value="+506" data-length="8">Costa Rica (+506)</option>
+    <option value="+385" data-length="9">Croatia (+385)</option>
+    <option value="+357" data-length="8">Cyprus (+357)</option>
+    <option value="+420" data-length="9">Czech Republic (+420)</option>
+    <option value="+45" data-length="8">Denmark (+45)</option>
+    <option value="+20" data-length="10">Egypt (+20)</option>
+    <option value="+372" data-length="7">Estonia (+372)</option>
+    <option value="+251" data-length="9">Ethiopia (+251)</option>
+    <option value="+358" data-length="9">Finland (+358)</option>
+    <option value="+33" data-length="9">France (+33)</option>
+    <option value="+995" data-length="9">Georgia (+995)</option>
+    <option value="+49" data-length="11">Germany (+49)</option>
+    <option value="+30" data-length="10">Greece (+30)</option>
+    <option value="+852" data-length="8">Hong Kong (+852)</option>
+    <option value="+36" data-length="9">Hungary (+36)</option>
+    <option value="+354" data-length="7">Iceland (+354)</option>
+    <option value="+91" data-length="10">India (+91)</option>
+    <option value="+62" data-length="10">Indonesia (+62)</option>
+    <option value="+98" data-length="10">Iran (+98)</option>
+    <option value="+964" data-length="10">Iraq (+964)</option>
+    <option value="+353" data-length="9">Ireland (+353)</option>
+    <option value="+972" data-length="9">Israel (+972)</option>
+    <option value="+39" data-length="10">Italy (+39)</option>
+    <option value="+81" data-length="10">Japan (+81)</option>
+    <option value="+962" data-length="9">Jordan (+962)</option>
+    <option value="+7" data-length="10">Kazakhstan (+7)</option>
+    <option value="+254" data-length="9">Kenya (+254)</option>
+    <option value="+965" data-length="8">Kuwait (+965)</option>
+    <option value="+996" data-length="9">Kyrgyzstan (+996)</option>
+    <option value="+856" data-length="10">Laos (+856)</option>
+    <option value="+371" data-length="8">Latvia (+371)</option>
+    <option value="+961" data-length="8">Lebanon (+961)</option>
+    <option value="+266" data-length="8">Lesotho (+266)</option>
+    <option value="+370" data-length="8">Lithuania (+370)</option>
+    <option value="+352" data-length="9">Luxembourg (+352)</option>
+    <option value="+853" data-length="8">Macau (+853)</option>
+    <option value="+60" data-length="9">Malaysia (+60)</option>
+    <option value="+960" data-length="7">Maldives (+960)</option>
+    <option value="+223" data-length="8">Mali (+223)</option>
+    <option value="+356" data-length="8">Malta (+356)</option>
+    <option value="+52" data-length="10">Mexico (+52)</option>
+    <option value="+373" data-length="8">Moldova (+373)</option>
+    <option value="+377" data-length="8">Monaco (+377)</option>
+    <option value="+976" data-length="8">Mongolia (+976)</option>
+    <option value="+382" data-length="8">Montenegro (+382)</option>
+    <option value="+212" data-length="9">Morocco (+212)</option>
+    <option value="+258" data-length="9">Mozambique (+258)</option>
+    <option value="+95" data-length="9">Myanmar (+95)</option>
+    <option value="+977" data-length="10">Nepal (+977)</option>
+    <option value="+31" data-length="9">Netherlands (+31)</option>
+    <option value="+64" data-length="9">New Zealand (+64)</option>
+    <option value="+234" data-length="10">Nigeria (+234)</option>
+    <option value="+47" data-length="8">Norway (+47)</option>
+    <option value="+92" data-length="10">Pakistan (+92)</option>
+    <option value="+507" data-length="8">Panama (+507)</option>
+    <option value="+595" data-length="9">Paraguay (+595)</option>
+    <option value="+51" data-length="9">Peru (+51)</option>
+    <option value="+63" data-length="10">Philippines (+63)</option>
+    <option value="+48" data-length="9">Poland (+48)</option>
+    <option value="+351" data-length="9">Portugal (+351)</option>
+    <option value="+974" data-length="8">Qatar (+974)</option>
+    <option value="+40" data-length="10">Romania (+40)</option>
+    <option value="+7" data-length="10">Russia (+7)</option>
+    <option value="+966" data-length="9">Saudi Arabia (+966)</option>
+    <option value="+65" data-length="8">Singapore (+65)</option>
+    <option value="+421" data-length="9">Slovakia (+421)</option>
+    <option value="+386" data-length="8">Slovenia (+386)</option>
+    <option value="+27" data-length="9">South Africa (+27)</option>
+    <option value="+82" data-length="10">South Korea (+82)</option>
+    <option value="+34" data-length="9">Spain (+34)</option>
+    <option value="+94" data-length="9">Sri Lanka (+94)</option>
+    <option value="+46" data-length="9">Sweden (+46)</option>
+    <option value="+41" data-length="9">Switzerland (+41)</option>
+    <option value="+886" data-length="10">Taiwan (+886)</option>
+    <option value="+66" data-length="9">Thailand (+66)</option>
+    <option value="+216" data-length="8">Tunisia (+216)</option>
+    <option value="+90" data-length="10">Turkey (+90)</option>
+    <option value="+380" data-length="9">Ukraine (+380)</option>
+    <option value="+971" data-length="9">United Arab Emirates (+971)</option>
+    <option value="+44" data-length="10">United Kingdom (+44)</option>
+    <option value="+1" data-length="10">United States (+1)</option>
+    <option value="+598" data-length="8">Uruguay (+598)</option>
+    <option value="+998" data-length="9">Uzbekistan (+998)</option>
+    <option value="+58" data-length="10">Venezuela (+58)</option>
+    <option value="+84" data-length="9">Vietnam (+84)</option>
+    <option value="+263" data-length="9">Zimbabwe (+263)</option>
+    </select>
+    <input type="tel" id="contact" name="contact" required pattern="\d+"><br><br>
+    <label for="language">Language:</label><br>
+    <select id="language" name="language" required>
+        <option value="">-- Language --</option>
+        <option value="English">English</option>
+        <option value="Spanish">Spanish</option>
+        <option value="Korean">Korean</option>
+        <option value="Japanese">Japanese</option>
+        <option value="Chinese">Chinese</option>
+        </select><br><br>
+    <label for="slot">Pick Up Slot:</label><br>
+    <input type="time" id="slot" name="slot" required min="07:30" max="18:30" step="1800">
     <div id="price-info" style="margin-bottom:1rem; font-weight:bold;">
         Price per person: £<span id="price-per-person">0</span><br><br>
         Total Price: £<span id="total-price">0</span>
@@ -115,6 +284,38 @@
     </footer>
 
     <script>
+        // Get the query parameters from the URL
+        const params = new URLSearchParams(window.location.search);
+
+        // Fetch each value
+        const tour = params.get('tour');
+        const participants = params.get('participants');
+        const date = params.get('date');
+        const language = params.get('language');
+        const slot = params.get('slot');
+
+        // Example: Set the values in your form if the elements exist
+        if (tour) document.getElementById('tour').value = tour;
+        if (participants) document.getElementById('participants').value = participants;
+        if (date) document.getElementById('date').value = date;
+        if (language) document.getElementById('language').value = language;
+        if (slot) document.getElementById('slot').value = slot;
+
+        // You can also display or use these values elsewhere as needed
+        console.log({ tour, participants, date, language, slot });
+
+        ['tour', 'participants', 'date', 'language', 'slot'].forEach(function(id) {
+        var el = document.getElementById(id);
+        if (el && el.value) {
+            if (el.tagName === 'SELECT' || el.type === 'date') {
+            el.disabled = true;
+            } else {
+            el.readOnly = true;
+            }
+            el.style.background = '#eee';
+        }
+        });
+
         const tourPrices = {
         "Changsha: River View, Ancient Hill, Handcraft & Night Market": [280, 160, 120, 115, 105, 95],
         "Changsha: No Chili, No Problem, Non-Spicy Foodie Adventure": [190, 115, 90, 80, 70, 65],
@@ -155,6 +356,7 @@
         "Zhengzhou: Cultural Alleys, Handicraft, and Night Market": [270, 155, 115, 110, 100, 90],
         "Zhengzhou to Kaifeng: Museum, Incense Craft and Song Legacy": [330, 195, 150, 145, 135, 125]
         };
+
         document.addEventListener('DOMContentLoaded', function() {
           const dateInput = document.getElementById('date');
           const now = new Date();
@@ -205,7 +407,38 @@
             },
             onApprove: function(data, actions) {
             return actions.order.capture().then(function(details) {
-                alert('Payment completed by ' + details.payer.name.given_name + '!');
+                // Get the user's email from your form
+                const tour = document.getElementById('tour').value;
+                const date = document.getElementById('date').value;
+                const participants = document.getElementById('participants').value;
+                const userName = document.getElementById('name').value;
+                const userLocation = document.getElementById('location').value;
+                const userEmail = document.getElementById('email').value;
+                const contactCountry = document.getElementById('contact-country').value;
+                const contact = document.getElementById('contact').value;
+                const slot = document.getElementById('slot') ? document.getElementById('slot').value : '';
+                const language = document.getElementById('language') ? document.getElementById('language').value : '';
+                const totalPrice = document.getElementById('total-price') ? document.getElementById('total-price').value : '';
+
+                // Send booking confirmation email via your backend or Formspree
+                fetch('https://formspree.io/f/mzzvpqyz', {
+                method: 'POST',
+                headers: { 'Content-Type': 'application/json' },
+                body: JSON.stringify({
+                    email: userEmail,
+                    name: userName,
+                    location: userLocation,
+                    contact: contactCountry + contact,
+                    date: date,
+                    slot: slot,
+                    participants: participants,
+                    tour: tour,
+                    totalPrice : totalPrice,
+                    message: `Thank you for booking ${tour}!`
+                })
+                });
+
+                alert('Payment completed by ' + details.payer.name.given_name + '!\nA confirmation email has been sent.');
                 // Optionally redirect or show confirmation
             });
             }
