--- a/city/wuhan.html
+++ b/city/wuhan.html
@@ -7,18 +7,43 @@
     <link rel="stylesheet" href="../style.css">
 </head>
 <body>
-    <header>
-        <h1>Skymatz Resources</h1>
-        <p>Your Journey, Our Expertise</p>
-    </header>
-    
-    <nav>
-        <a href="../index.html">Home</a>
-        <a href="../about.html">About Us</a>
-        <a href="../destination.html">Destination</a>
-        <a href="../calendar.html">Book Tour</a>
-        <a href="../contact.html">Contact</a>
-    </nav>
+<header class="site-header">
+<div class="header-container">
+<div class="header-left">
+<img src="../picture/companylogo/svgexport-3.jpg" alt="Skymatz Resources Logo" class="company-logo">
+</div>
+<nav class="header-nav">
+<a href="../index.html">Home</a>
+<a href="../about.html">About Us</a> 
+<div class="dropdown">
+  <a href="../destination.html" class="dropbtn">Destination ▼</a>
+  <div class="dropdown-content">
+    <a href="chongqing.html">Chongqing</a>
+    <a href="chengdu.html">Chengdu</a>
+    <a href="changsha.html">Changsha</a>
+    <a href="dalian.html">Dalian</a>
+    <a href="guangzhou.html">Guangzhou</a>
+    <a href="guilin.html">Guilin</a>
+    <a href="hangzhou.html">Hangzhou</a>
+    <a href="jingdezhen.html">Jingdezhen</a>
+    <a href="nanjing.html">Nanjing</a>
+    <a href="qingdao.html">Qingdao</a>
+    <a href="shanghai.html">Shanghai</a>
+    <a href="wuhan.html">Wuhan</a>
+    <a href="xiamen.html">Xiamen</a>
+    <a href="xian.html">Xi’an</a>
+    <a href="zhangjiajie.html">Zhangjiajie</a>
+    <a href="zhengzhou.html">Zhengzhou</a>
+  </div>
+</div>
+<a href="../calendar.html">Book Tour</a>
+<a href="../contact.html">Contact Us</a>
+</nav>
+<div class="header-right">
+<span class="contact-number">+44 7724231701</span>
+</div>
+</div>
+</header>
 
     <main>
         <section class="tour-listings">
