--- a/about.html
+++ b/about.html
@@ -47,7 +47,7 @@
     
 
     <div class="content">
-        <img src="picture/companylogo/WechatIMG2841.png" alt="Skymatz Resources Logo" style="max-width:600px; display:block; margin: 0 auto 1.5em auto;">    
+        <img src="picture/companylogo/WechatIMG2841.png" alt="Skymatz Resources Logo" style="display:block; margin: 0 auto 1.5em auto;">    
     <h2>About Us</h2>
     <p>Skymatz Resources is a professional travel company headquartered in the United Kingdom, dedicated to creating unique and unforgettable short-term private travel experiences for international tourists. The company specializes in tailor-made travel itinerary arrangements, offering cultural exploration, culinary delights, natural landscapes, and luxurious leisure experiences, ensuring every trip meets or exceeds client expectations.</p>
     
