Amend body form

--- a/calendar.html
+++ b/calendar.html
@@ -550,6 +550,7 @@
                     participants: participants,
                     tour: tour,
                     totalPrice : totalPrice,
+                    language : language,
                     message: `Thank you for booking ${tour}!`
                 })
                 });
