Amend body form

--- a/calendar.html
+++ b/calendar.html
@@ -555,7 +555,7 @@
                 })
                 });
 
-                alert('Payment completed by ' + details.payer.name.given_name + '!\nA confirmation email has been sent.');
+                alert('Payment completed by ' + details.payer.name.given_name + '!\nA confirmation email will be sent to ' + userEmail + ' within 24 hours.');
                 // Optionally redirect or show confirmation
             });
             }
