Amend body form

--- a/tourpackage/chongqing/chongqing-normal-tour-details.html
+++ b/tourpackage/chongqing/chongqing-normal-tour-details.html
@@ -222,8 +222,23 @@
             <li>Due to Chongqing's unique traffic conditions, certain congested areas may be accessed by taxi instead of private car. We appreciate your understanding and flexibility.</li>
           </ul>
         </section>
-      </main>
 
+      <section class="reviews">
+        <h2>Guest Reviews</h2>
+        <div class="review">
+          <strong>Maria Elena – Mexico</strong>
+          <p>"Great! Diego is an excellent tour guide. We made the most of our day and he took us to the best places in Chongqing. Diego is very friendly and patient. We felt very safe with a Spanish-speaking tour guide. We highly recommend him!"</p>
+        </div>
+        <div class="review">
+          <strong>Roxana – Romania</strong>
+          <p>"Loved our guide!!"</p>
+        </div>
+        <div class="review">
+          <strong>Shimin – United States</strong>
+          <p>"I had a fantastic experience with Linxin! He was incredibly friendly and made me feel comfortable right away. What stood out most was how attentive he was to my interests. He picked up on the topics I was curious about and naturally steered our conversations toward them. It made the tour feel really personalized and engaging. I appreciated how thoughtful and knowledgeable he was throughout. Highly recommend!!"</p>
+        </div>
+      </section>
+    </main>
 
     </div>
 
